fixed z-index on fav prop block

--- a/grav/user/themes/haywire/sass/partials/_navbar.sass
+++ b/grav/user/themes/haywire/sass/partials/_navbar.sass
@@ -48,6 +48,7 @@
         position: absolute
         right: 0
         height: 45px
+        z-index: 999
         .button.is-favorite, .button.is-icon-button
             @extend .is-bg-blue-light
             height: 100%
